final commit, bass abh aur nahi hota