@@ -1,4 +1,4 @@
-package com.sat.app.dao;
+package com.cs.sat.dao;
 
 import java.io.BufferedReader;
 import java.io.File;
@@ -13,46 +13,50 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.stream.Collectors;
 
+import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.Resource;
+import org.springframework.stereotype.Component;
+import org.springframework.util.FileCopyUtils;
+
 @Component
 public class SeatsDao {
 
 	public String getAllSeats() {
-		Resource resource = new ClassPathResource("seats.json");
+		Resource resource = new ClassPathResource("building.json");
 		InputStream inputStream;
 		byte[] fileData = null;
 		try {
 			inputStream = resource.getInputStream();
 			fileData = FileCopyUtils.copyToByteArray(inputStream);
 
-		} catch (IOException e) { 
+		} catch (IOException e) { // TODO Auto-generated catch block
 			e.printStackTrace();
 		}
-
+		
 		String outputString = new String(fileData);
 		System.out.println(outputString);
 		return outputString;
 	}
 
 	public void updateAllocations(String json) {
-		Path path = Paths.get("E:\\Seats\\seats.json");
-
+		Path path = Paths.get("/Users/rohitnaikkundaikar/Desktop/CS/mvps-cs-hackathon/public/building.json");
 		try {
-
-			Files.writeString(path, json, StandardCharsets.UTF_8);
+			byte[] strToBytes = json.getBytes();
+			Files.write(path, strToBytes);
 		} catch (Exception ex) {
 			System.out.print("Invalid Path");
 		}
 	}
 
 	public String getAllocations() {
-		 File file = new File("E:\\Seats\\seats.json");
+		File file = new File("/Users/rohitnaikkundaikar/Desktop/CS/mvps-cs-hackathon/public/building.json");
 		BufferedReader br = null;
 		try {
 			br = new BufferedReader(new FileReader(file));
 		} catch (FileNotFoundException e) {
+			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
 		return br.lines().collect(Collectors.joining());
 	}
-
 }
